fixed images distortion in chrome

--- a/styles/style.css
+++ b/styles/style.css
@@ -287,7 +287,7 @@
   }
 
   .image {
-    height: 100%;
+    block-size: 100%;
   }
 
   .landscape {
